Sun Aug 20 20:43:44 BST 2006 (njh)
----------------------------------
  * libclamav/untar.c:	Ensure a file is open before closing on error return

Sat Aug 19 22:37:28 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Use HAVE_CTIME_R_2 for older daily.cvd files -
				interim implementation of a patch suggestion by
				Mark Pizzolato

Fri Aug 18 15:40:30 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Handle load balancing better when one machine of the
				cluster is down

Wed Aug 16 00:41:30 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: correctly remove patches after applying

Tue Aug 15 16:07:11 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Windows fix: handle more than 26 temporary files in
				a temporary directory

Sun Aug 13 22:13:45 CEST 2006 (tk)
----------------------------------
  * configure: add --enable-experimental switch

Sun Aug 13 21:41:59 CEST 2006 (tk)
----------------------------------
  * shared/cdiff.c: add support for command MOVE

Sat Aug 12 23:16:05 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: build(): redirect stdout and stderr to /dev/null before
		       calling /bin/tar

Fri Aug 11 19:37:24 CEST 2006 (acab)
------------------------------------
  * libclamav: add support for SUE decryption (disabled)

Fri Aug 11 18:09:00 CEST 2006 (tk)
----------------------------------
  * libclamav/others.c: apply win32 support patch from NJH

Fri Aug 11 16:09:46 CEST 2006 (tk)
----------------------------------
  * libclamav/vba_extract.c: revert incorrect patch from Sat Aug  5 21:10:32

Fri Aug 11 15:49:24 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: improve target detection in --verify-cdiff

Wed Aug  9 14:09:34 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --list-sigs now supports incremental directories

Mon Aug  7 17:06:41 CEST 2006 (acab)